--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" href="/icons/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="JJL Abacus" />
+    <meta name="description" content="Novasphere" />
     <link rel="apple-touch-icon" href="/logos/logo192.png" />
     <link rel="manifest" href="/manifest.json" />
-    <title>JJL Abacus</title>
+    <title>Novasphere</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
